# starmax-gtx2

./: .gitignore  LICENSE  README.md  hacs.json  pytest.ini  requirements-dev.txt
bridge/: README.md
client/: .gitignore  README.md  pyproject.toml
client/docs/: command-reference.md
client/starmax_client/: __init__.py  cli.py  crc.py  crown.py  dialface.py  dialfmt.py  dialtranscode.py  framing.py  gpstrack.py  otafmt.py  protobuf.py  rawaccel.py  records.py  slots.py  transport.py  workout.py
client/starmax_client/commands/: __init__.py  base.py  dials.py  files.py  health.py  notify.py  settings.py  weather.py
client/tests/: fixtures.py  test_command_audit.py  test_commands.py  test_crc.py  test_crown.py  test_dialface.py  test_dials.py  test_dialtranscode.py  test_files.py  test_firmware_flash.py  test_framing.py  test_gpstrack.py  test_health.py  test_integration_smoke.py  test_monitor.py  test_notify.py  test_otafmt.py  test_protobuf.py  test_rawaccel.py  test_records.py  test_settings.py  test_slots.py  test_transport.py  test_weather.py  test_workout.py
dashboards/: README.md  gtx2-dashboard-core.yaml  gtx2-dashboard.yaml
docs/: capture-guide.md  cfw-board-port.md  cfw-crown-ha.md  cfw-crown-protocol.md  cfw-rawaccel-protocol.md  cfw-recovery-runbook.md  cfw-sdk-build.md  command-audit.md  custom-firmware-poc.md  decode-notes.md  dial-bindings.md  firmware-dfu.md  firmware-ota-byte-map.md  gtx2-blobd.md  gtx2-bridge-reduced-role.md  gtx2-face-builder.html  hardware-teardown-guide.md  health-metrics.md  index.html  notifications.md  protocol-spec.md  (+6 more)
(+73 files in other folders)
